--- a/src/app/change-detection/change-detection-child/change-detection-child.component.html
+++ b/src/app/change-detection/change-detection-child/change-detection-child.component.html
@@ -3,3 +3,7 @@
 </ul>
 <button (click)="refresh()">Refresh</button>
 <p></p>
+
+<ul>
+    <li *ngFor="let fruit of (fruits)">{{ fruit }}</li>
+</ul>
